Documentacion GetSolicitudes
